--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ body, html{
     background-attachment:scroll;
   }
 }
+/*--------------------------------------------------------------------FOOTER STYLING---------------------------------------------------------------------------------------*/
 .footer-container{
   background-color:#212329;
   padding: 4rem 0 4rem 0 ;
